fixed full screen nav alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ header {
 
 .header-nav {
     float: right;
-    padding-right: 50px;
+    padding-right: 235px;
 }
 
 a {
@@ -128,6 +128,7 @@ p {
     padding: 10px 40px 20px 40px;
     margin: 100px auto 60px auto;
     width: 960px;
+    height: 700px;
     border: solid 2px #cccccc;
     background: #ffffff;
 }
@@ -157,12 +158,12 @@ p {
 
 #name-input, #email-input {
     height: 30px;
-    width: 950px;
+    width: 875px;
 }
 
 #message-input {
     height: 250px;
-    width: 950px;
+    width: 875px;
 }
 
                             /* Responsive Media HW */
@@ -205,6 +206,10 @@ p {
     }
     .header > h1 {
         margin-left: 50px;
+    }
+
+    .header-nav {
+
     }
 }
 
